# e-learning

./: .env.sample  README.md  docker-compose.yml  e_learning.json  payment.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
course/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_alter_payment_paid_amt.py  0002_payment.py  0003_course_student_lesson_student.py
htmlcov/: index.html
users/: admin.py  models.py  urls.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py
